--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ APP_ENV=dev
 APP_SECRET=09496baf383b18de2c0dfdc7007ae36b
 ###< symfony/framework-bundle ###
 
+JWT_SECRET=%kernel.project_dir%/config/jwt/public.pem
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
