--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@
 APP_ENV=dev
 APP_SECRET=09496baf383b18de2c0dfdc7007ae36b
 ###< symfony/framework-bundle ###
-
+JWT_PUBLIC=%kernel.project_dir%/config/jwt/public.pem
+JWT_PRIVATE=%kernel.project_dir%/config/jwt/private.pem
 JWT_SECRET=%kernel.project_dir%/config/jwt/public.pem
 
 ###> doctrine/doctrine-bundle ###
@@ -28,7 +29,9 @@ JWT_SECRET=%kernel.project_dir%/config/jwt/public.pem
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://root:pass@mysql:3306/ui_test?serverVersion=8.0"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
