--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    jwt_private_key: '%kernel.project_dir%/config/jwt/private.pem'
+    jwt_public_key: '%kernel.project_dir%/config/jwt/public.pem'
 
 services:
     # default configuration for services in *this* file
@@ -24,4 +26,4 @@ services:
     # please note that last definitions always *replace* previous ones
     App\Service\JWTService:
         arguments:
-            $passphrase: '%env(JWT_PASSPHRASE)%'
+            $secretKey: '%env(JWT_SECRET)%'
