--- a/.env
+++ b/.env
@@ -35,5 +35,5 @@ DATABASE_URL="mysql://root:pass@mysql:3306/ui_test?serverVersion=8.0"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=^https?://luie\.raidvm\.com$
 ###< nelmio/cors-bundle ###
