--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,15 +1,16 @@
 nelmio_cors:
     defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
+        origin_regex: false  # Changed to false for exact matching
+        allow_credentials: true
+        allow_origin: ['https://luie.raidvm.com']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: ['Link']
         max_age: 3600
     paths:
-        '^/': null
         '^/api/':
-            allow_origin: [ 'https://luie.raidvm.com' ]
-            allow_headers: [ 'Content-Type', 'Authorization' ]
-            allow_methods: [ 'POST', 'PUT', 'GET', 'DELETE' ]
+            allow_credentials: true
+            allow_origin: ['https://luie.raidvm.com']
+            allow_headers: ['Content-Type', 'Authorization']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
             max_age: 3600
